--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   </div>
   <section class="gallery">
     <div>
-      <img src="images/group-lesson.jpeg" alt="Group surf lesson">
+      <img src="images/Group Lesson.jpeg" alt="Group surf lesson">
       <p>Group Lesson</p>
     </div>
     <div>
@@ -226,7 +226,7 @@
       <p>Intermediate Lesson</p>
     </div>
     <div>
-      <img src="images/kids-lesson.jpeg" alt="Kids surf lesson">
+      <img src="images/Kids Lesson.jpeg" alt="Kids surf lesson">
       <p>Kids Lesson</p>
     </div>
     <div>
@@ -279,5 +279,6 @@
   </script>
 </body>
 </html>
+
 
 
