--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
       font-family: 'Open Sans', sans-serif;
     }
     header {
-  background: url('images/Kopbanner.png') center/contain no-repeat;
-  height: 300px;
-  max-width: 1300px;
-  margin: 0 auto;
-  background-color: #000; /* vult de randen op */
-}
+      background: url('images/Kopbanner.png') center/cover no-repeat;
+      height: 300px;
+      max-width: 1300px;
+      margin: 0 auto;
+    }
     .title-block {
       text-align: center;
       padding: 2rem 1rem;
@@ -280,6 +279,7 @@
   </script>
 </body>
 </html>
+
 
 
 
