--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adam Air Surf School – Kuta Beach</title>
+  <title>Surf School Kuta Beach - Adam Air</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
@@ -169,7 +169,7 @@
   </section>
 
   <section class="intro">
-    <h2>Welcome to Adam Air Surf School</h2>
+    <h2>Welcome to Surf School Kuta Beach - Adam Air</h2>
     <p>
       Specially designed for those who want to learn surfing in Bali, 
       our instructors will guide you to become confident on the waves. 
@@ -279,6 +279,7 @@
   </script>
 </body>
 </html>
+
 
 
 
