--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <header></header>
 
   <section class="title-block">
-    <h1>Adam Air Surf School</h1>
+    <h1>Surf School Kuta Beach - Adam Air</h1>
     <p>Kuta Beach, Bali</p>
   </section>
 
@@ -183,7 +183,7 @@
     <div class="card">
       <h2>Location</h2>
       <p><strong>Address:</strong> Jl. Pantai Kuta, Kuta, Badung Regency, Bali</p>
-      <p><strong>Route:</strong> Adam Air Surf School, Kuta Beach</p>
+      <p><strong>Route:</strong> Surf School Kuta Beach - Adam Air</p>
       <div class="map">
               </div>
       <p>
@@ -240,34 +240,34 @@
   </div>
 
   <footer>
-    <p>&copy; 2026 Adam Air Surf School – Kuta Beach, Bali</p>
+    <p>&copy; 2026 Surf School Kuta Beach - Adam Air, Kuta Bali</p>
     <p>Website Designer Johan Sopamena Alias DJ Sopamena</p>
   </footer>
 
   <script>
     const translations = {
       en: {
-        introTitle: "Welcome to Adam Air Surf School",
+        introTitle: "Welcome to Surf School Kuta Beach - Adam Air",
         introText: "Specially designed for those who want to learn surfing in Bali, our instructors will guide you to become confident on the waves. Choose the class that suits you best: private, semi-private, or group lessons. Enjoy our pick-up service in selected areas to make reaching us easier. Right after the lesson, you’ll be riding waves smoothly like a pro!"
       },
       id: {
-        introTitle: "Selamat datang di Adam Air Surf School",
+        introTitle: "Selamat datang di Surf School Kuta Beach - Adam Air",
         introText: "Dirancang khusus bagi mereka yang ingin belajar berselancar di Bali, instruktur kami akan membimbing Anda agar percaya diri di atas ombak. Pilih kelas yang sesuai: privat, semi-privat, atau kelompok. Nikmati layanan penjemputan di area tertentu agar lebih mudah datang. Setelah pelajaran, Anda akan berselancar seperti profesional!"
       },
       nl: {
-        introTitle: "Welkom bij Adam Air Surf School",
+        introTitle: "Welkom bij Surf School Kuta Beach - Adam Air",
         introText: "Speciaal ontworpen voor iedereen die wil leren surfen in Bali. Onze instructeurs helpen je zelfverzekerd op de golven te staan. Kies de les die bij je past: privé, semi-privé of groepslessen. Maak gebruik van onze pick-up service in geselecteerde gebieden. Na de les surf je soepel als een pro!"
       },
       de: {
-        introTitle: "Willkommen bei Adam Air Surf School",
+        introTitle: "Willkommen bei Surf School Kuta Beach - Adam Air",
         introText: "Speziell für alle, die Surfen auf Bali lernen möchten. Unsere Lehrer helfen dir, sicher auf den Wellen zu stehen. Wähle den Kurs, der zu dir passt: Privat, Semi-Privat oder Gruppe. Nutze unseren Abholservice in ausgewählten Gebieten. Nach dem Unterricht surfst du wie ein Profi!"
       },
       fr: {
-        introTitle: "Bienvenue à Adam Air Surf School",
+        introTitle: "Bienvenue à Surf School Kuta Beach - Adam Air",
         introText: "Spécialement conçu pour ceux qui veulent apprendre à surfer à Bali. Nos instructeurs vous aideront à prendre confiance sur les vagues. Choisissez le cours qui vous convient: privé, semi-privé ou en groupe. Profitez de notre service de ramassage dans certaines zones. Après le cours, vous surferez comme un pro!"
       },
       ru: {
-        introTitle: "Добро пожаловать в Adam Air Surf School",
+        introTitle: "Добро пожаловать в Surf School Kuta Beach - Adam Air",
         introText: "Специально для тех, кто хочет научиться серфингу на Бали. Наши инструкторы помогут вам уверенно чувствовать себя на волнах. Выберите подходящий урок: индивидуальный, полуиндивидуальный или групповой. Воспользуйтесь услугой трансфера в выбранных районах. После урока вы будете кататься на волнах как профессионал!"
       }
     };
@@ -279,6 +279,7 @@
   </script>
 </body>
 </html>
+
 
 
 
